# backend-fastapi

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  models.py  pyproject.toml
README_FILES/: task-3.md
docker/postgres/: Dockerfile  crontab  entrypoint-wrapper.sh  start-cron.sh
docker/postgres/maintenance/: backup  backups_cleaner  constants.sh  restore
src/: main.py  pytest.ini  requirements.txt
src/account/: dependencies.py  routing.py
src/account/models/: __init__.py  enums.py  mixins.py  user_models.py
src/account/schemas/: base.py
src/account/services/: auth_service.py  file_service.py  user_service.py
src/account/utils/: models_utils.py
src/account/views/: auth.py  registration.py
src/alembic/: env.py
src/alembic/versions/: 070335d15bdd_.py  52f61cddb4a2_.py  5f7f061afd14_.py  75aa11e7b302_create_users_table.py  97f2e9fa8ef8_.py  9fc42eab1680_.py  b2343acbfbeb_.py
src/core/: routing.py
src/core/config/: __init__.py  db.py  logging.py  main.py  settings.py
src/core/dependencies/: auth.py
src/core/models/: base.py  secondary_tables.py  user.py  user_models.py
src/core/repositories/: user.py
src/core/schemas/: base.py  project_patterns.py  query_handler.py  role_patterns.py  user.py  user_patterns.py
src/core/schemas/pydantic_schemas/: action_schemas.py  extended_mixins.py  pagination.py  project_schemas.py  pydantic_mixins.py  response_schemas.py  role_schemas.py  user_schemas.py
src/core/schemas/pydantic_shcemas/: action_schemas.py  extended_mixins.py  pagination.py  project_schemas.py  pydantic_mixins.py  response_schemas.py  role_schemas.py  user_schemas.py
src/core/static_data/: new_project_body.py  new_project_subject.py
src/core/utils/: jwt.py  pagination_mixin.py  security.py  send_email.py
src/core/utils/health_check/: views.py
src/core/views/: auth.py
src/core/views/approval_handler/: approval_api.py
src/core/views/auth/: auth_handler.py
src/core/views/projects_handler/: projects_api.py
src/core/views/roles_handler/: roles_api.py
src/core/views/skills_handler/: skills_api.py
src/core/views/users_handler/: users_api.py
src/database_manip/: config.py  init_tests_db.py
src/database_manip/manip_prod/: config.py  init_prod_db.py
src/database_manip/manip_prod/raw_data/: new_roles.py
src/database_manip/manip_tests/: config.py  init_tests_db.py
src/database_manip/manip_tests/raw_data/: new_skill_role_assosiation.py  projects_to_insert.py  role_types_to_insert.py  roles_to_insert.py  skills_to_insert.py  users_to_insert.py
src/database_manip/raw_data/: new_skill_role_assosiation.py  projects_to_insert.py  role_types_to_insert.py  roles_to_insert.py  skills_to_insert.py  users_to_insert.py
src/models/: _base.py  general.py  types_.py
src/tests/: basic_config.py  conftest.py  test_auth.py
src/tests/test_basic_api/: test_user_api.py
src/tests/test_basic_api/test_user_handlers.py/: test_user_api.py
src/tests/test_projects_api/: test_project_change.py  test_project_creation.py  test_project_delete.py  test_project_list.py  test_project_retreival.py
src/tests/test_roles_api/: test_add_role_project.py  test_delete_project_roles.py  test_project_roles_retreive.py  test_roles_put.py
src/tests/test_skills_api/: test_delete_skills_role_connection.py  test_skill_data_add.py
src/tests/test_users_api/: test_skills_add.py  test_skills_delete.py  test_skills_retreival.py  test_user_change_data.py  test_user_retreival.py
src/tests_new/: basic_config.py  conftest.py
src/tests_new/test_projects_api/: test_project_change.py  test_project_creation.py  test_project_delete.py  test_project_list.py  test_project_retreival.py
src/tests_new/test_roles_api/: test_add_role_project.py  test_delete_project_roles.py  test_project_roles_retreive.py  test_roles_put.py
src/tests_new/test_skills_api/: test_delete_skills_role_connection.py  test_skill_data_add.py  test_skill_data_delete.py
src/tests_new/test_users_api/: test_skills_add.py  test_skills_delete.py  test_skills_retreival.py  test_user_change_data.py  test_user_retreival.py
